<resources>
    <string name="app_name">Encrypto</string>
    <string name="enter_key">Please Set Your Secret ENCRYPTION KEY For Your ID Passwords.</string>
    <string name="next">Next</string>
    <string name="bio_warning">Use your BioMetric or Password to access the App</string>
    <string name="encryption_key">Encryption Key</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
    <string name="app_widget_description">This is an app widget description</string>
    <string name="set">Set</string>
    <string name="confirm_key_text">Confirm Encryption Key</string>
    <string name="add_details">Add Details</string>
    <string name="show_credentials">Show Credentials</string>
    <string name="username">Username</string>
    <string name="account_type">Account Type</string>
    <string name="password">Password</string>
    <string name="add">Add</string>
    <string name="add_credentials">Add Your Credentials</string>
    <string name="username_">Username :</string>
    <string name="confirm_password">Confirm password</string>
    <string name="enter_password">Enter password</string>
    <string name="set_key">Set Key</string>
    <string name="from">From</string>
    <string name="sk_developers_studio">SK Developers Studio</string>
    <string name="authenticate">Authenticate</string>
    <string name="add_credentails">Add Credentials</string>
    <string name="backup">Create New Backup</string>
    <string name="restore">Restore</string>
    <string name="skip_and_continue">Skip and continue\t\t</string>
    <string name="encrypt">Encrypt</string>
    <string name="cancel">Cancel</string>
    <string name="master_key">Master Key</string>
    <string name="confirm_key">Confirm Key</string>
    <string name="copied_to_clipboard">Copied to clipboard!</string>
    <string name="search_here">Search here</string>
    <string name="generate_password">Generate A Strong Password</string>
    <string name="delete_existing_backup">Delete Existing Backup</string>
    <string name="logout">Logout</string>
    <string name="login">Login</string>
    <string name="reset_password">Reset Account and Key</string>
    <string name="delete">Delete</string>
</resources>