<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:gravity="center_horizontal"
    android:layout_margin="10dp"
    android:padding="10dp"
    app:cardCornerRadius="20dp"
    android:outlineAmbientShadowColor="#43a047"
    android:outlineSpotShadowColor="#43a047"
    app:cardElevation="5dp"
    android:backgroundTint="@color/primarybg"
    android:animateLayoutChanges="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="15dp"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:animateLayoutChanges="true"
            android:gravity="center_vertical"
            android:id="@+id/headerRv"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:id="@+id/logo"
                android:layout_gravity="center_vertical"
                android:background="@android:color/transparent"
                android:layout_marginEnd="20dp"
                android:src="@drawable/dummy"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/account_type"
                android:layout_weight="1"
                android:id="@+id/accountTypeTextView"
                android:layout_gravity="center"
                android:textColor="@color/whiteandblack"
                android:textStyle="bold"
                android:textSize="20sp"
                android:layout_marginBottom="0dp"/>
            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:background="@android:color/transparent"
                android:id="@+id/editBtn"
                android:layout_marginStart="20dp"
                android:src="@drawable/ic_baseline_edit_24"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:id="@+id/usernameLayout"
            android:visibility="gone"
            android:layout_marginTop="15dp"
            android:animateLayoutChanges="true"
            android:orientation="horizontal">
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/username_"
                android:textSize="15sp"
                android:textStyle="bold"
                android:id="@+id/usernameTextView"
                android:textColor="@color/whiteandblack"
                android:layout_marginVertical="5dp"
                android:layout_weight="1"/>

            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:id="@+id/copyUsernameBtn"
                android:background="@android:color/transparent"
                android:src="@drawable/ic_baseline_content_copy_24"/>

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:id="@+id/pwdLayout"
            android:visibility="gone"
            android:animateLayoutChanges="true"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/password"
                android:textSize="15sp"
                android:textStyle="bold"
                android:textColor="#BF1414"
                android:id="@+id/passwordTextView"
                android:layout_marginVertical="5dp"
                android:layout_weight="1"/>

            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:visibility="gone"
                android:background="@android:color/transparent"
                android:id="@+id/copyPwd"
                android:src="@drawable/ic_baseline_content_copy_24"/>

            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:background="@android:color/transparent"
                android:id="@+id/showPasswordBtn"
                android:src="@drawable/ic_baseline_remove_red_eye_24"/>

        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/copied_to_clipboard"
            android:textStyle="bold"
            android:layout_marginVertical="5dp"
            android:id="@+id/copied"
            android:visibility="gone"
            android:textAlignment="center"
            android:layout_gravity="center_horizontal"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:id="@+id/dltLayout"
            android:layout_marginVertical="10dp"
            android:visibility="gone"
            android:animateLayoutChanges="true"
            android:orientation="horizontal">

            <androidx.appcompat.widget.AppCompatButton
                android:layout_width="0dp"
                android:layout_height="35dp"
                android:text="@string/delete"
                android:layout_margin="5dp"
                android:textColor="@color/white"
                android:drawableTint="@color/white"
                android:textAllCaps="false"
                android:id="@+id/delete"
                android:backgroundTint="#92F80808"
                android:layout_weight="1"
                android:drawablePadding="10dp"
                android:gravity="start|center_vertical"
                android:paddingHorizontal="25dp"
                android:background="@drawable/btnbg"
                android:drawableStart="@drawable/ic_baseline_delete_sweep_24"/>

        </LinearLayout>

    </LinearLayout>


</androidx.cardview.widget.CardView>