<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_gravity="center"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:gravity="center"
    android:layout_height="wrap_content">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:cardCornerRadius="30dp"
                app:cardBackgroundColor="@color/primarybg"
                android:elevation="20dp"
                >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="vertical">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAlignment="textStart"
                        android:textStyle="bold"
                        android:textSize="16sp"
                        android:layout_marginHorizontal="30dp"
                        android:id="@+id/dailog_text"
                        android:layout_marginTop="30dp"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="start"
                        android:justificationMode="inter_word"
                        android:id="@+id/note_text"
                        android:textStyle="bold|italic"
                        android:textColor="@color/red"
                        android:layout_marginHorizontal="30dp"
                        android:layout_marginTop="5dp"/>

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="30dp"
                        android:id="@+id/keyRoot"
                        android:layout_marginHorizontal="30dp"
                        android:layout_marginBottom="10dp"
                        android:background="@color/primarybg"
                        app:hintEnabled="false"
                        app:passwordToggleEnabled="true">
                        <EditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:id="@+id/key"
                            android:inputType="textPassword"
                            android:maxLines="1"
                            android:hint="@string/master_key"
                            android:background="@color/primarybg"
                            android:padding="15dp"
                            tools:ignore="LabelFor" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="10dp"
                        android:background="@color/primarybg"
                        android:id="@+id/cnfKeyRoot"
                        android:layout_marginHorizontal="30dp"
                        app:hintEnabled="false"
                        app:passwordToggleEnabled="true">
                        <EditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:id="@+id/cnfkey"
                            android:inputType="textPassword"
                            android:maxLines="1"
                            android:hint="@string/confirm_key"
                            android:background="@color/primarybg"
                            android:padding="15dp"/>
                    </com.google.android.material.textfield.TextInputLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:gravity="end">


                        <androidx.appcompat.widget.AppCompatButton
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:text="@string/cancel"
                            android:textColor="#43a047"
                            android:layout_weight="1"
                            android:textAlignment="textStart"
                            android:layout_margin="30dp"
                            android:id="@+id/cancelBtn"
                            android:background="@android:color/transparent"/>
                        <androidx.appcompat.widget.AppCompatButton
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/encrypt"
                            android:textColor="#43a047"
                            android:layout_margin="30dp"
                            android:id="@+id/positiveBtn"
                            android:background="@android:color/transparent"/>

                    </LinearLayout>

                </LinearLayout>
            </androidx.cardview.widget.CardView>

        </LinearLayout>
    </ScrollView>
</LinearLayout>